--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "type": "module",
   "scripts": {
     "build": "",
-    "start": "node ."
+    "start": "node .",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "^20.11.25",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
+    "prettier": "^3.2.5",
     "typescript": "^5.3.3"
   }
 }
