--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,13 @@
   "overrides": [
     {
       "extends": ["xo-typescript", "prettier"],
-      "files": ["*.ts", "*.tsx"]
+      "files": ["*.ts"]
+    },
+    {
+      "files": ["**/src/**/model/*.ts"],
+      "rules": {
+        "@typescript-eslint/naming-convention": "off"
+      }
     }
   ],
   "parserOptions": {
