Handle error while gettingAll pictures

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "build:dev": "tsc -W",
     "start": "node .",
+    "start:dev": "node --watch .",
     "prepare": "husky"
   },
   "keywords": [],
