--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "tsc -W",
     "start": "node .",
     "start:dev": "node --watch .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,9 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@jest/globals": "^29.7.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.25",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
@@ -26,8 +29,11 @@
     "eslint-config-xo": "^0.45.0",
     "eslint-config-xo-typescript": "^4.0.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-ts-webcompat-resolver": "^1.0.0",
     "lint-staged": "^15.2.5",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.1.4",
     "typescript": "^5.4.5"
   },
   "dependencies": {
