--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "new-cap": ["error", { "capIsNewExceptions": ["Router"] }]
+  }
 }
