Change notfoundEndpoint test to papafrita

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,6 @@ sonar.sources=./src
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-sonar.test.inclusions=**/*.test.ts
-sonar.coverage.exclusions=**/types.ts, server/index.ts, **/model/*.ts, database/index.ts
+sonar.test.inclusions=src/**/*.test.ts
+sonar.coverage.exclusions=src/**/**/types.ts, src/**/**/index.ts, src/**/model/*.ts, 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
