--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb-memory-server": "^9.3.0",
     "mongoose": "^8.4.0"
   }
 }
