--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "prettier": "^3.2.5",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.4",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "mongodb-memory-server": "^9.3.0"
   },
   "dependencies": {
     "chalk": "^4.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb-memory-server": "^9.3.0",
     "mongoose": "^8.4.0"
   }
 }
