--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
+    "@types/cors": "^2.8.17",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-xo": "^0.45.0",
@@ -35,14 +36,15 @@
     "jest": "^29.7.0",
     "jest-ts-webcompat-resolver": "^1.0.0",
     "lint-staged": "^15.2.5",
+    "mongodb-memory-server": "^9.3.0",
     "prettier": "^3.2.5",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.4",
-    "typescript": "^5.4.5",
-    "mongodb-memory-server": "^9.3.0"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0"
