--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,5 +8,5 @@ sonar.sources=./src
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=src/**/*.test.ts
-sonar.coverage.exclusions=src/**/**/types.ts, src/**/**/index.ts
+sonar.coverage.exclusions=src/**/types.ts, src/**/index.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
